fix profile text wrap

--- a/css/main.css
+++ b/css/main.css
@@ -137,8 +137,8 @@ header {
 
 .hti {
   float: left;
-padding:1rem;
-box-sizing: border-box;
+  padding:1rem;
+  box-sizing: border-box;
 }
 
 .hti img {
@@ -157,6 +157,7 @@ box-sizing: border-box;
   font-weight: bold;
   padding-bottom: 0.5rem;
   text-align: center;
+  display: block;
 }
 
 .read-more .arrow,
